<resources>
    <string name="app_name">bottomNav</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_selectsheet_product">セット名一覧画面</string>
    <string name="name_selectsheet_listview">リスト表示画面</string>
    <string name="name_selectsheet_tabel">セット検索画面</string>

    <!-- ここからactivity_main 01関連 -->
    <string name="text01_product">セット名</string>
    <string name="text01_madein">運動量</string>
    <string name="text01_number">時間(分)</string>
    <string name="text01_price">回数</string>
    <string name="text01_kome">※</string>
    <string name="text01_hinttext">全角・半角12文字以内</string>
    <string name="text01_hintnumber">半角数字</string>
    <string name="button01_regist">登録</string>
    <string name="button01_show">表示</string>

    <!-- 選択用RadioButton -->
    <string name="radio01_product">セット一覧 (ListView×ArrayAdapter)</string>
    <string name="radio01_listview">リスト表示 (ListView×BaseAdapter)</string>
    <string name="radio01_tablelayout">セット検索</string>
    <!-- ここまで -->

    <!-- ここからselect_sheet_product 02関連 -->
    <!-- select_sheet_product 02 -->
    <string name="text02_title_detail">セット一覧</string>
    <string name="text02_title">セット一覧</string>
    <string name="button02_alldelete">全削除</string>

    <!-- row_sheet_listview 05 -->
    <string name="text05_title_madein">運動量：</string>
    <string name="text05_title_number">時間(分)：</string>
    <string name="text05_title_price">回数：</string>
    <!-- ここまで -->

    <!-- select_sheet_listview 03 -->
    <string name="text03_title_detail">リスト表示</string>

    <!-- select_sheet_table 04 -->
    <string name="text04_title_detail">セット検索</string>
    <string name="text04_hinttext">品名を入力して下さい。</string>
    <string name="button04_search">検索</string>
    <string name="tab_text_1">エクササイズ内容</string>
    <string name="tab_text_2">エクササイズ説明</string>


    <string name="button">next</string>
    <string name="return_sub">戻る</string>
    <string name="select_date">〇月〇日</string>
    <string name="home">Home</string>
    <string name="record">Record</string>
    <string name="comment">Comment</string>
    <string name="read_error">Read file error !</string>
    <string name="name">Name</string>
    <string name="edit_btn">編集</string>
    <string name="register_btn">登録</string>
    <string name="tex1">TextView</string>
    <string name="save_file">Save file</string>
    <string name="read_file">Read file</string>
    <string name="no_text">"No text !"</string>
    <string name="saved">Saved</string>
    <string name="textview">TextView</string>
    <string name="textview2">hello</string>
    <string name="tev">hello world</string>
    <string name="text1">体重管理</string>
    <string name="text2">朝食</string>
    <string name="text3">昼食</string>
    <string name="text4">間食</string>
    <string name="text5">夕食</string>
    <string name="text6">運動</string>
    <string name="text7">日記</string>
    <string name="todo">TODO</string>
    <string name="description">picture</string>
    <string name="textview3">記録</string>
    <string name="textview4">体重</string>
    <string name="textview5">体脂肪率</string>
    <string name="textview6">kg</string>
    <string name="weight1">〇〇.〇</string>
    <string name="textview7">％</string>
    <string name="textview8" />
    <string name="meal">食事管理</string>
    <string name="titletrain">エクササイズ追加画面</string>
    <string name="titledialy">日記</string>
    <string name="nikki">日記</string>
    <string name="hello">hello</string>
    <string name="btnUserWeight">体重・体脂肪</string>
    <string name="btnBMI">BMI</string>
    <string name="bmihint">BMI</string>
    <string name="imb1">IMB1</string>
    <string name="mealrecord">食事の履歴</string>
    <string name="keyselect">キーワード検索</string>
    <string name="add1">追加</string>
    <string name="hintin">入力して下さい</string>
    <string name="tooleditbtn">編集</string>
    <string name="buttoncamera">写真を撮る</string>
    <string name="descriptioncamera">camera picture</string>
    <string name="reday">＜</string>
    <string name="nextday">＞</string>
    <string name="bmibtn1">BMI算出</string>
    <string name="bmi_description">※ BMI = 体重(kg) ÷ (身長(m)×身長(m))</string>
    <string name="newfoodbtn">+myfood</string>
    <string name="myset">メニュー追加</string>
    <string name="staroptionbtn">sample</string>
    <string name="ghint">〇グラム</string>
    <string name="chint">〇カロリー</string>
    <string name="setname">セット名</string>
    <string name="addbtn1">＋</string>
    <string name="savebtn">保存</string>
    <string name="titlemeal">食事管理</string>
    <string name="menu_body">体重管理</string>
    <string name="menu_meal">食事</string>
    <string name="menu_breakfast">朝食</string>
    <string name="meun_lunch">昼食</string>
    <string name="menu_snack">間食</string>
    <string name="menu_dinner">夕食</string>
    <string name="menu_exercise">エクササイズ</string>
    <string name="menu_camera">カメラ</string>
    <string name="menu_reset">reset</string>
    <string name="imgbtnsetmeal">set meal</string>
    <string name="goaddmyf">+MY FOODを追加する</string>
    <string name="hint_key">company</string>
    <string name="hint_value">US$price</string>
    <string name="insert">insert</string>
    <string name="read">read</string>
    <string name="b1">登録</string>
    <string name="b2">削除</string>
    <string name="menuselect">メニュー選択</string>
    <string name="weightofday">体重</string>
    <string name="subkg">Kg</string>
    <string name="histitle">食事履歴検索</string>
    <string name="foodname">食品名</string>
    <string name="searchingbtn">検索</string>
    <string name="imgbtnsetre">検索履歴</string>
    <string name="foodpic">食品写真</string>
    <string name="WeightText">体重</string>
    <string name="KgText">Kg</string>
    <string name="weightsmp">体重グラフサンプル</string>
    <string name="ConCalText">消費カロリー</string>
    <string name="CalText">cal</string>
    <string name="gainCalText">摂取カロリー</string>
    <string name="bfText">朝食</string>
    <string name="bfbtn">bfbtn</string>
    <string name="luText">昼食</string>
    <string name="betText">間食</string>
    <string name="exeText">エクササイズ</string>
    <string name="go_execise">エクササイズ追加</string>
    <string name="weightadd">重量追加</string>
    <string name="setmenu">セットメニュー</string>
    <string name="exe_set">エクササイズの設定を行います．</string>
    <string name="re_btn">←</string>
    <string name="registerbtn">登録</string>
    <string name="deletebtn">削除</string>
    <string name="camera">食品写真追加画面</string>
    <string name="pic_set">写真がセットされます．</string>
    <string name="dText">夕食</string>
    <string name="weight">体重管理</string>
    <string name="menu_dialog">ダイアログ</string>
    <string name="menu_all">メニュー</string>
    <string name="pres">保存</string>
    <string name="menu_addbtn">追加ボタン</string>
    <string name="loadbtn">ロード</string>
    <string name="menu_gallerybtn">ギャラリー</string>
    <string name="BmiText">BMI</string>
    <string name="BmrText">BMR(基礎代謝)</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">dash</string>
    <string name="title_notifications">noti</string>
    <string name="graph">グラフ</string>
    <string name="age_33">年齢：33歳</string>
    <string name="kasareal">カサレアル</string>
    <string name="btnDrink">好きな飲み物</string>
    <string name="btnFood">好きな食べ物</string>
    <string name="btnUserInfo">個人情報</string>
    <string name="btnColor">好きな色</string>
    <string name="favorite_food">好きな食べ物：ラーメン</string>
    <string name="favorite_drink">好きな飲み物：コーラ</string>
    <string name="favorite_color">好きな色：黒</string>
    <string name="oneweek">1週間</string>
    <string name="onemonth">1か月</string>
    <string name="threemonth">3か月</string>
    <string name="halfyear">6か月</string>
    <string name="look_graph">体重グラフ</string>
    <string name="re_btn2">戻る</string>
    <string name="bunryo">"   1人前分量"</string>
    <string name="g">"　 g"</string>
    <string name="kcal">"　 kcal"</string>
    <string name="ener">"     エネルギー"</string>
    <string name="carbon">"   炭水化物"</string>
    <string name="protain">"     タンパク質"</string>
    <string name="fat">"  脂質"</string>
    <string name="disc">セットメニュー名（必須）</string>
    <string name="hissu">"(必須)"</string>
    <string name="bikou">"            備考"</string>
    <string name="konbini">例：コンビニで購入</string>

    <!--    設定画面のもの-->
    <string name="app_name_setting">My Setting2</string>
    <string name="pre_survice_title">プレミアムサービス詳細</string>
    <string name="menu_settingbtn">設定</string>
    <string name="default_value_preference_theme">light</string>
    <string name="user_info_setting">基本情報設定</string>
    <string name="nickname">・ニックネーム</string>
    <string name="name_detail">15文字以内。ハイフン・スペース不可</string>
    <string name="email_setting">・E-mail</string>
    <string name="email_add">**********@gmail.com</string>
    <string name="phone_add">（携帯アドレス未設定）</string>
    <string name="pass_word">・パスワード</string>
    <string name="user_sex_setting">・性別</string>
    <string name="user_barth_setting">・生年月日</string>
    <string name="user_height_setting">・身長※</string>
    <string name="ok_btn">OK</string>
    <string name="text_setting_1">設定</string>
    <string name="text_setting_2">メイン</string>
    <string name="set_user_info_title">基本情報設定</string>
    <string name="stopbtn">退会する</string>
    <string name="reasons">退会理由を入力してください。※１０００文字以内</string>
    <string name="hint">ニックネームを入力</string>
    <string name="man">男性</string>
    <string name="woman">女性</string>
    <string name="emailsum">アップデート情報等をメールでお届けします．</string>
    <string name="ask">お問い合わせ内容を記入してください．</string>
    <string name="askbtn">作成</string>
    <string name="set_stop_title">退会</string>
    <string name="otoiawase">お問い合わせ</string>
    <string name="putpass">パスコードを入力してください。</string>
    <string name="setpass">パスコードを設定します。</string>
    <string name="mail_tv1">現在のメールアドレス</string>
    <string name="mail_change">メールアドレスの変更</string>
    <string name="write_new">・新しいメールアドレス</string>
    <string name="make_mail">確認メールを送信する</string>
    <!--    設定 ここまで-->

    <string name="record_screen">記録画面</string>
    <string name="setting_screen">設定画面</string>
<!-- 追加 2020/08/21-->
    <string name="openset">設定画面を開く</string>
    <string name="setbtn">設定</string>
    <string name="retrun_btn">記録画面に戻る</string>
    <string name="menu_delbtn">全削除ボタン</string>
<!-- ここまで-->
</resources>