<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0F5"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3CB371"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titlemeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageB1_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/imb1"
                        app:srcCompat="@drawable/ic_launcher" />


                    <ImageButton
                        android:id="@+id/button7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/imgbtnsetmeal"
                        app:srcCompat="@drawable/ic_launcher" />

                    <ImageButton
                        android:id="@+id/goreButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/imgbtnsetre"
                        app:srcCompat="@drawable/ic_launcher" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="280dp"
                    android:layout_height="180dp"
                    android:background="@drawable/frame_form"
                    android:contentDescription="@string/descriptioncamera"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center" />

                <com.example.bottomnav.notify.NonScrollListView
                    android:id="@+id/itemlists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                </com.example.bottomnav.notify.NonScrollListView>

            </LinearLayout>

        </ScrollView>

</LinearLayout>
